<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/color_gray_line"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white">
        <TextView
            android:layout_weight="1"
            android:id="@+id/tv_zonghe"
            android:text="@string/sousou_zonghe"
            android:textSize="15dp"
            android:gravity="center"
            android:textColor="@color/color_sososu_red"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/tv_xiaoliang"
            android:text="@string/sousou_xiaolinag"
            android:textSize="15dp"
            android:textColor="#4F4F4F"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

        <LinearLayout
            android:id="@+id/liner_jiage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_weight="1">
            <TextView
                android:id="@+id/tv_jiage"
                android:text="@string/sousou_jiage"
                android:textSize="15dp"
                android:textColor="#4F4F4F"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/imag_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/shaixuan_up_gray"/>
                <ImageView
                    android:id="@+id/imag_down"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:src="@drawable/shaixuan_down_gray"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:visibility="gone"
            android:id="@+id/liner_change"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/image_hengshu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:src="@mipmap/icon_hengpai"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:visibility="gone"
            android:id="@+id/liner_shaixuan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_weight="1">
            <TextView
                android:id="@+id/tv_shaixuan"
                android:text="@string/sousou_shaixuan"
                android:textSize="15dp"
                android:textColor="#4F4F4F"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_height="wrap_content"
                android:src="@mipmap/icon_shuaixuan"/>
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/color_gray_line"/>


</LinearLayout>